adiciona scripts `lint:check` `lint:write`

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Um clone do TabNews com o objetivo de entender, revisar e me aprofundar em conceitos de programação.",
   "main": "index.js",
   "scripts": {
-   "dev": "next dev"
+    "dev": "next dev",
+    "lint:check": "prettier --check .",
+    "lint:fix": "prettier --write ."
   },
   "author": "Vicente Junior",
   "license": "MIT",
@@ -12,5 +14,8 @@
     "next": "^13.1.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "prettier": "^3.7.4"
   }
 }
