--- a/.env.development
+++ b/.env.development
@@ -3,3 +3,4 @@ POSTGRES_PORT=5432
 POSTGRES_USER=postgres
 POSTGRES_DB=postgres
 POSTGRES_PASSWORD=dev1234
+DATABASE_URL=postgres://$POSTGRES_USER:$POSTGRES_PASSWORD@:5432/$POSTGRES_DB
