--- a/.github/workflows/linting.yaml
+++ b/.github/workflows/linting.yaml
@@ -21,7 +21,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkou@v4
+      - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
           node-version: "lts/hydrogen"
