--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@commitlint/config-conventional": "^20.4.1",
+    "commitlint": "^19.3.0",
     "concurrently": "^9.2.1",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.4",
