--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "test:watch": "jest --watchAll --runInBand",
     "migrate:create": "node-pg-migrate -m infra/migrations create",
     "migrate:up": "node-pg-migrate -m infra/migrations --envPath .env.development up",
-    "wait-for-postgres": "node infra/scripts/wait-for-postgres"
+    "wait-for-postgres": "node infra/scripts/wait-for-postgres",
+    "prepare": "husky"
   },
   "author": "Vicente Junior",
   "license": "MIT",
@@ -36,6 +37,7 @@
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.4",
     "eslint-plugin-jest": "^28.6.0",
+    "husky": "^9.1.4",
     "jest": "^29.6.2",
     "prettier": "^3.7.4"
   }
