--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "migrate:create": "node-pg-migrate -m infra/migrations create",
     "migrate:up": "node-pg-migrate -m infra/migrations --envPath .env.development up",
     "wait-for-postgres": "node infra/scripts/wait-for-postgres",
+    "commit": "cz",
     "prepare": "husky"
   },
   "author": "Vicente Junior",
@@ -32,13 +33,20 @@
   },
   "devDependencies": {
     "@commitlint/config-conventional": "^20.4.1",
+    "commitizen": "^4.3.0",
     "commitlint": "^19.3.0",
     "concurrently": "^9.2.1",
+    "cz-conventional-changelog": "^3.3.0",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.4",
     "eslint-plugin-jest": "^28.6.0",
     "husky": "^9.1.4",
     "jest": "^29.6.2",
     "prettier": "^3.7.4"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
