--- a/package.json
+++ b/package.json
@@ -4,18 +4,18 @@
   "description": "Um clone do TabNews com o objetivo de entender, revisar e me aprofundar em conceitos de programação.",
   "main": "index.js",
   "scripts": {
-    "dev": "npm run services:up && npm run services:wait:database && npm run migrate:up && next dev",
+    "dev": "npm run services:up && npm run services:wait:database && npm run migrations:up && next dev",
     "services:up": "docker compose -f ./infra/compose.yaml up -d",
     "services:stop": "docker compose -f ./infra/compose.yaml stop",
     "services:down": "docker compose -f ./infra/compose.yaml down",
     "services:wait:database": "node infra/scripts/wait-for-postgres",
+    "migrations:create": "node-pg-migrate -m infra/migrations create",
+    "migrations:up": "node-pg-migrate -m infra/migrations --envPath .env.development up",
+    "test": "npm run services:up && concurrently -n next,jest --hide next --k -s command-jest \"next dev\" \"jest --runInBand\"",
+    "test:watch": "jest --watchAll --runInBand",
     "lint:prettier:check": "prettier --check .",
     "lint:prettier:fix": "prettier --write .",
     "lint:eslint:check": "next lint --dir .",
-    "test": "npm run services:up && concurrently -n next,jest --hide next --k -s command-jest \"next dev\" \"jest --runInBand\"",
-    "test:watch": "jest --watchAll --runInBand",
-    "migrate:create": "node-pg-migrate -m infra/migrations create",
-    "migrate:up": "node-pg-migrate -m infra/migrations --envPath .env.development up",
     "commit": "cz",
     "prepare": "husky"
   },
