feat: add `posttest` script in package.json

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "migrations:create": "node-pg-migrate -m infra/migrations create",
     "migrations:up": "node-pg-migrate -m infra/migrations --envPath .env.development up",
     "test": "npm run services:up && concurrently -n next,jest --hide next --k -s command-jest \"next dev\" \"jest --runInBand\"",
+    "posttest": "npm run services:stop",
     "test:watch": "jest --watchAll --runInBand",
     "lint:prettier:check": "prettier --check .",
     "lint:prettier:fix": "prettier --write .",
