refactor: tests changes names and code

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "migrations:up": "node-pg-migrate -m infra/migrations --envPath .env.development up",
     "test": "npm run services:up && concurrently -n next,jest --hide next --k -s command-jest \"next dev\" \"jest --runInBand\"",
     "posttest": "npm run services:stop",
-    "test:watch": "jest --watchAll --runInBand",
+    "test:watch": "jest --watchAll --runInBand --verbose",
     "lint:prettier:check": "prettier --check .",
     "lint:prettier:fix": "prettier --write .",
     "lint:eslint:check": "next lint --dir .",
